@@ -283,8 +283,7 @@ about.message=Released under the terms of the GNU General Public License\n\n\
     \ \ \ \ Swedish (sv) - Patrik Johansson <patjoh@itstud.chalmers.se>\n\n\
     Past Contributers:\n\
     \ \ \ \ Aaron Flatten  <aflatten@users.sourceforge.net>\n\
-    \ \ \ \ Bilel Remmache <rbilel@users.sourceforge.net>\n\
-    \ \ \ \ SVM <svmcoranto@users.sourceforge.net>\n\n\
+    \ \ \ \ Bilel Remmache <rbilel@users.sourceforge.net>\n\n\
     Homepage: http://jsxe.sourceforge.net/
 #}}}
 
